fix voor code review #4 #5 #6 #8 #9

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,36 +9,32 @@
 </head>
 <body>
     <header>
-
+        <ul class="ham-items">
+            <li><a href="index.html">pagina1</a></li>
+            <li><a href="index.html">pagina2</a></li>
+            <li><a href="index.html">pagina3</a></li>
+        </ul>
         <nav>
-            <ul class="sideBar">
-                <li onclick=closeSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-                <li><a href="#">pagina 1</a></li>
-                <li><a href="#">pagina 2</a></li>
-                <li><a href="#">pagina 3</a></li>
-                <li><a href="#">pagina 4</a></li>
-            </ul>
-
-            <ul class="menuBar">
-                <li><a href="index.html"><img src="assets/zaaien.jpg" alt=""></a></li>
-                <li class="hideOnMobile"><a href="#">pagina 2</a></li>
-                <li class="hideOnMobile"><a href="#">pagina 3</a></li>
-                <li class="hideOnMobile"><a href="#">pagina 4</a></li>
-                <li class="hideOnMobile"><a href="#">pagina 5</a></li>
-                <li class="menuButton" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
-            </ul>
+            <a class="logo" href="#"><img class="mascotte" src="assets/Neutraal.svg" alt="plaatje van mascotte"></a>
+        
+            <button class="ham-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </nav>
     </header>
 
     <main>
 
-        <h1>dit is alleen een test, focus op de header en het hamburgermenu</h1>
+        <img  class="harry" src="assets/Neutraal.svg" alt="plaatje van mascotte">
 
         <section>
             <details>
                 <summary>test</summary>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore non, natus alias impedit, fugiat officia iure totam id quibusdam voluptate cupiditate magni deserunt libero ipsa placeat illum repudiandae rem in reprehenderit consequatur accusantium aperiam. Praesentium, dolor? Fugiat, eaque unde. Aperiam corporis magnam impedit illo soluta sequi fuga consequatur temporibus iure.</p>
             </details>
+            <p class="bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolores ipsum sapiente. Exercitationem asperiores tempora et commodi, omnis eaque sed error illum odit, esse saepe.</p>
         </section>
 
         <section>
@@ -46,6 +42,7 @@
                 <summary>test</summary>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore non, natus alias impedit, fugiat officia iure totam id quibusdam voluptate cupiditate magni deserunt libero ipsa placeat illum repudiandae rem in reprehenderit consequatur accusantium aperiam. Praesentium, dolor? Fugiat, eaque unde. Aperiam corporis magnam impedit illo soluta sequi fuga consequatur temporibus iure.</p>
             </details>
+            <p class="bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolores ipsum sapiente. Exercitationem asperiores tempora et commodi, omnis eaque sed error illum odit, esse saepe.</p>
         </section>
 
         <section>
@@ -53,6 +50,7 @@
                 <summary>test</summary>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore non, natus alias impedit, fugiat officia iure totam id quibusdam voluptate cupiditate magni deserunt libero ipsa placeat illum repudiandae rem in reprehenderit consequatur accusantium aperiam. Praesentium, dolor? Fugiat, eaque unde. Aperiam corporis magnam impedit illo soluta sequi fuga consequatur temporibus iure.</p>
             </details>
+            <p class="bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolores ipsum sapiente. Exercitationem asperiores tempora et commodi, omnis eaque sed error illum odit, esse saepe.</p>
         </section>
 
         <section>
@@ -60,6 +58,7 @@
                 <summary>test</summary>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore non, natus alias impedit, fugiat officia iure totam id quibusdam voluptate cupiditate magni deserunt libero ipsa placeat illum repudiandae rem in reprehenderit consequatur accusantium aperiam. Praesentium, dolor? Fugiat, eaque unde. Aperiam corporis magnam impedit illo soluta sequi fuga consequatur temporibus iure.</p>
             </details>
+            <p class="bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolores ipsum sapiente. Exercitationem asperiores tempora et commodi, omnis eaque sed error illum odit, esse saepe.</p>
         </section>
     </main>
 
@@ -67,6 +66,7 @@
         <article>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur nostrum aliquid numquam error cumque, tenetur nihil, nulla eos facere consequuntur voluptatum minima doloremque assumenda cum eius consequatur architecto nobis optio!
         </article>
+        <p class="bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolores ipsum sapiente. Exercitationem asperiores tempora et commodi, omnis eaque sed error illum odit, esse saepe.</p>
     </footer>
 </body>
 </html>
