laatste fix en issues verwerken #12 #14 #15

--- a/index.html
+++ b/index.html
@@ -10,63 +10,159 @@
 <body>
     <header>
         <ul class="ham-items">
-            <li><a href="index.html">pagina1</a></li>
-            <li><a href="index.html">pagina2</a></li>
-            <li><a href="index.html">pagina3</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Stekjes</a></li>
+            <li><a href="index.html">Agenda</a></li>
+            <li><a href="index.html">Contact</a></li>
         </ul>
         <nav>
             <a class="logo" href="#"><img class="mascotte" src="assets/Neutraal.svg" alt="plaatje van mascotte"></a>
-        
+            <h1>Agenda</h1>
+            <label>
             <button class="ham-menu">
                 <span></span>
                 <span></span>
                 <span></span>
-            </button>
+            </button>menu</label>
+
         </nav>
     </header>
 
     <main>
 
         <img  class="harry" src="assets/Neutraal.svg" alt="plaatje van mascotte">
-
-        <section>
-            <details>
-                <summary>test</summary>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore non, natus alias impedit, fugiat officia iure totam id quibusdam voluptate cupiditate magni deserunt libero ipsa placeat illum repudiandae rem in reprehenderit consequatur accusantium aperiam. Praesentium, dolor? Fugiat, eaque unde. Aperiam corporis magnam impedit illo soluta sequi fuga consequatur temporibus iure.</p>
+        <section class="workshop-zaaien">
+            <details class="details-zaaien">
+                <summary class="summary-zaaien">Workshop zaaien</summary>
+                bij de OBA linnaeusstraat houden we regelmatig workshops waar wij samen gaan zaaien.
             </details>
-            <p class="bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolores ipsum sapiente. Exercitationem asperiores tempora et commodi, omnis eaque sed error illum odit, esse saepe.</p>
+
+            <ul class="adres">
+                <li>OBA Linnaeusstraat</li>
+                <li>11,-</li>
+                <li>29/05/2024</li>
+            </ul>
+
+            <button popovertarget="popup" class="button-green">Meld je aan!</button>
+            <dialog popover id="popup">
+                <p>Aangemeld!</p>
+                <button popovertarget="popup" popovertargetaction="hide" class="popup-button">Terug naar site</button>
+              </dialog>
         </section>
 
-        <section>
-            <details>
-                <summary>test</summary>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore non, natus alias impedit, fugiat officia iure totam id quibusdam voluptate cupiditate magni deserunt libero ipsa placeat illum repudiandae rem in reprehenderit consequatur accusantium aperiam. Praesentium, dolor? Fugiat, eaque unde. Aperiam corporis magnam impedit illo soluta sequi fuga consequatur temporibus iure.</p>
+        <section class="extra-info">
+            <p>Workshops zijn fantastische leermogelijkheden waarbij deelnemers 
+                praktische vaardigheden kunnen verwerven, nieuwe kennis kunnen 
+                opdoen en vaak ook nieuwe mensen kunnen ontmoeten.</p>
+            <details class="details-info">
+                <summary class="summary-info">Extra Info</summary>
+                Het idee achter jouw website om een overzicht te bieden van beschikbare workshops
+                is geweldig, omdat het mensen kan helpen om gemakkelijk toegang te krijgen tot deze 
+                waardevolle leermogelijkheden. Ontdek en Leer met Onze Workshopgids Welkom bij Plantswap, dé plek om workshops te ontdekken die jouw vaardigheden kunnen verbeteren, je passies kunnen verdiepen en je horizon kunnen verbreden
             </details>
-            <p class="bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolores ipsum sapiente. Exercitationem asperiores tempora et commodi, omnis eaque sed error illum odit, esse saepe.</p>
         </section>
 
-        <section>
-            <details>
-                <summary>test</summary>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore non, natus alias impedit, fugiat officia iure totam id quibusdam voluptate cupiditate magni deserunt libero ipsa placeat illum repudiandae rem in reprehenderit consequatur accusantium aperiam. Praesentium, dolor? Fugiat, eaque unde. Aperiam corporis magnam impedit illo soluta sequi fuga consequatur temporibus iure.</p>
-            </details>
-            <p class="bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolores ipsum sapiente. Exercitationem asperiores tempora et commodi, omnis eaque sed error illum odit, esse saepe.</p>
+        <section class="stekjes-maken">
+            <img src="assets/fiets.webp" alt="foto van fiets met plant" class="stekjes-foto">
+
+            <article class="stekjes-tekst">
+                <h2>Stekjes maken</h2>
+                <ul>
+                    <li>OBA Linnaeusstraat</li>
+                    <li>10,-</li>
+                    <li>3/19/2023</li>
+                </ul>
+            </article>
         </section>
 
-        <section>
-            <details>
-                <summary>test</summary>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore non, natus alias impedit, fugiat officia iure totam id quibusdam voluptate cupiditate magni deserunt libero ipsa placeat illum repudiandae rem in reprehenderit consequatur accusantium aperiam. Praesentium, dolor? Fugiat, eaque unde. Aperiam corporis magnam impedit illo soluta sequi fuga consequatur temporibus iure.</p>
-            </details>
-            <p class="bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolores ipsum sapiente. Exercitationem asperiores tempora et commodi, omnis eaque sed error illum odit, esse saepe.</p>
+        <section class="stekjes-maken">
+            <img src="assets/fiets.webp" alt="foto van fiets met plant" class="stekjes-foto">
+            <article class="stekjes-tekst">
+                <h2>Stekjes maken</h2>
+                <ul>
+                    <li>OBA Linnaeusstraat</li>
+                    <li>10,-</li>
+                    <li>3/19/2023</li>
+                </ul>
+            </article>
         </section>
+
+        <section class="stekjes-maken">
+            <img src="assets/fiets.webp" alt="foto van fiets met plant" class="stekjes-foto">
+            <article class="stekjes-tekst">
+                <h2>Stekjes maken</h2>
+                <ul>
+                    <li>OBA Linnaeusstraat</li>
+                    <li>10,-</li>
+                    <li>3/19/2023</li>
+                </ul>
+            </article>
+        </section>
+
+        <section class="stekjes-maken">
+            <img src="assets/fiets.webp" alt="foto van fiets met plant" class="stekjes-foto">
+            <article class="stekjes-tekst">
+                <h2>Stekjes maken</h2>
+                <ul>
+                    <li>OBA Linnaeusstraat</li>
+                    <li>10,-</li>
+                    <li>3/19/2023</li>
+                </ul>
+            </article>
+        </section>
+
+        <section class="stekjes-maken">
+            <img src="assets/fiets.webp" alt="foto van fiets met plant" class="stekjes-foto">
+            <article class="stekjes-tekst">
+                <h2>Stekjes maken</h2>
+                <ul>
+                    <li>OBA Linnaeusstraat</li>
+                    <li>10,-</li>
+                    <li>3/19/2023</li>
+                </ul>
+            </article>
+        </section>
+
+        <section class="stekjes-maken">
+            <img src="assets/fiets.webp" alt="foto van fiets met plant" class="stekjes-foto">
+            <article class="stekjes-tekst">
+                <h2>Stekjes maken</h2>
+                <ul>
+                    <li>OBA Linnaeusstraat</li>
+                    <li>10,-</li>
+                    <li>3/19/2023</li>
+                </ul>
+            </article>
+        </section>
+
     </main>
 
     <footer>
-        <article>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur nostrum aliquid numquam error cumque, tenetur nihil, nulla eos facere consequuntur voluptatum minima doloremque assumenda cum eius consequatur architecto nobis optio!
-        </article>
-        <p class="bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolores ipsum sapiente. Exercitationem asperiores tempora et commodi, omnis eaque sed error illum odit, esse saepe.</p>
+        <section>
+            <h3>Adres</h3>
+            <ul class="adresGegevens">
+                <li>OBA Linnaeusstraat</li>
+                <li>Linnaeusstraat 44</li>
+                <li>1092 CL Amsterdam</li>
+            </ul>
+        </section>
+
+        <section>
+            <h3>Contact</h3>
+            <ul class="contactGegevens">
+                <li>buurtcampusoost@hva.nl</li>
+                <li>06 43450198</li>
+                <li>BTW 0055.81.205.B01</li>
+            </ul>
+        </section>
+
+        <section>
+            <h3>Samenwerken</h3>
+            <ul class="samenwerkInfo">
+                <li>Wil jij met andere organisaties, buurtbewoners en studenten samenwerken aan de stedelijke uitdagingen van
+                    Amsterdam Oost? Stuur een e-mail naar buurtcampusoost@hva.nl.</li>
+            </ul>
+        </section>
     </footer>
 </body>
 </html>
